# tts-server

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  config.example.yaml  docker-compose.yml  prompts.md  pyproject.toml
benchmarks/: bench_http.py  bench_stress.py  bench_ws.py  common.py
docs/: adding-a-backend.md
docs/superpowers/plans/: 2026-07-03-tts-server.md
docs/superpowers/specs/: 2026-07-03-tts-server-design.md
examples/curl/: speech.sh
examples/javascript/: ws_client.mjs
examples/python/: http_client.py  ws_client.py
scripts/: gpu_validate.py
src/tts_server/: config.py  errors.py  logging_config.py  main.py  models.py
src/tts_server/api/: elevenlabs_compat.py  health.py  native.py  openai_compat.py
src/tts_server/backends/: base.py  mock.py  qwen3.py  registry.py
src/tts_server/metrics/: __init__.py
src/tts_server/streaming/: audio.py  pipeline.py  websocket.py
tests/: conftest.py  test_app.py  test_audio.py  test_backend_base.py  test_benchmarks.py  test_config.py  test_elevenlabs_ws.py  test_logging.py  test_metrics.py  test_mock_backend.py  test_models.py  test_native_api.py  test_openai_api.py  test_pipeline.py  test_qwen3_backend.py  test_registry.py
